Added a compact axis rendering mode that draws tick labels inside the plot. Refactored the Time/Frequency/Histogram/Timeline charts to use a common Plot builder class. Refactored the number formatting code to be more consistent. Fixed a few bugs found along the way.